# typedefence

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.8F72C9432A23A2C3.idx
src/: main.cpp
src/core/: Game.cpp  Game.hpp  TypingManager.hpp
src/entities/: Entity.cpp  Entity.hpp  LivingEntity.cpp  LivingEntity.hpp  Player.cpp  Player.hpp  WordEntity.cpp  WordEntity.hpp
src/render/: Renderer.cpp  Renderer.hpp
